--- a/data/Marines.wiki
+++ b/data/Marines.wiki
@@ -14,7 +14,8 @@ currently has bounties on
             -shows the faces of Vulcan, Edan, Croaker, Krieger
         [Renegade Leader Kelsier] - 400g - DEAD - bounty offered by [House Zolis] (if alive)
         [Taman] the Swindler - 30g - ALIVE (because he has the barkeep's money somewhere) -  bounty offered by barkeep at [Fiore] who was cheated in gambling 
-           
+        GROUP THREE
+            due to shenannigans in [Gorda], the people pooled together funds to put a bounty on [Letho] - 200g
 
 
 +++Ranks:
