--- a/data/Kaladim.wiki
+++ b/data/Kaladim.wiki
@@ -24,7 +24,7 @@ The inside is littered with broken human arms, the remainder of each respective 
             -420 copper claws            
 
 ++++The Dry Well
-  Of all the rocky caves, this is the place that most resembles it's original construction, ancient dwarven stonework around what would have been a very deep pool of well water. But instead is now home to the [Daughter of the Night] who screams in agony while futily writing scriptures on the limited wall space with bloody stubbed arms.
+  Of all the rocky caves, this is the place that most resembles it's original construction, ancient dwarven stonework around what would have been a very deep pool of well water. But instead is now home to the [Daughter of the Night] who screams in agony while futily writing scriptures on the limited wall space with bloody stubbed arms. 60ft deep.
   
   Annis Hag - Daughter of the Night
     -was given ancient trolls blood to achieve a near immortality
