--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -835,7 +835,7 @@ Teleport back to the cave to the Material Plane
       -[Krieger] spending two points of inspiration to master getting in and out of dragon form
       -kills the 5 [House Salazar Assassins] that were in the shaman king's palace of [Kalas]
     
-    Returns to the ship and sails for [Kaladim} (2 days) XX
+    Returns to the ship and sails for [Kaladim] (2 days) XX
       -[Croaker] spends an extra day to braid etherium into [Grogar]'s cat of nine tails
       -the group parks the boat on the west side of [Faydwer]
     
