--- a/data/Nicosia.wiki
+++ b/data/Nicosia.wiki
@@ -2,6 +2,9 @@
 
 the [Shadowfell] reflection of [Mayara] in [Fiore]
 
-formerly ruled by the lich [Velsharoon], this city has become a undead slum
+formerly ruled by the lich [Velsharoon], this city has become a undead slum for undead who have lost thier minds, usually making thier way here from other places in the realm, attracted to it by the [Exanimate Stone] of [Lothric].
 
 currently ruled by [Lorian], a beefy dark knight, and [Lothric], an emaciated necromancer 
+
+
+Traveling through Nicosia, explorers will encounter endless zombies
