--- a/data/Rotting Tower.wiki
+++ b/data/Rotting Tower.wiki
@@ -4,3 +4,4 @@ The [Shadowfell] city of [Nowa Huta]
 
 nestled in a region that deteriotates living things within it, it's a city of spirits/ghasts/ghosts
 
+This is the home of [Vecna]
