--- a/data/Vecna.wiki
+++ b/data/Vecna.wiki
@@ -4,7 +4,7 @@ God of evil secrets
 Stays in her plane of existence by the appeasement of the [Crones of Neriak] and respectfully empowers them.
 Oversees [Neriak]
 Symbol: Partially shattered one-eyed skull
-Home Plane: Shadowfell
+Home Plane: [Shadowfell] - [Rotting Tower]
 
 When Released:
     -by slaying the [Crones of Neriak]:
