--- a/OneWiki.wiki
+++ b/OneWiki.wiki
@@ -5,7 +5,7 @@ data_dir = data
 wikiwidehistory_maxentries = 100
 footnotes_as_wikiwords = False
 indexsearch_enabled = False
-last_wiki_word = Evil Group Notes
+last_wiki_word = Fellhuslyder
 hotkey_showhide_bywiki = 
 log_window_autoshow = Gray
 filestorage_identity_filenamemustmatch = False
@@ -28,7 +28,7 @@ wiki_lasttabssubctrls = textedit
 template_pagenamesre = ^template/
 wikipagetitle_creationmode = 1
 tabhistory_maxentries = 25
-tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Renegade Leader Kelsier;wikipage/OneWiki,wikipage/Characters,wikipage/Renegade Leader Kelsier;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Crones of Neriak;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Kaladim;wikipage/OneWiki,wikipage/House Rulings;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Gods,wikipage/Gruumsh;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Quaal,wikipage/Venril Sathir,wikipage/Luthadel;wikipage/OneWiki,wikipage/Dungeons,wikipage/Ak'anon Mines,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Rex The Smasher;wikipage/OneWiki,wikipage/Towns,wikipage/Odus,wikipage/Renegade Leader Kelsier;wikipage/OneWiki,wikipage/Realms,wikipage/Shadowfell,wikipage/Shadowfell Towns;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Quaal;wikipage/OneWiki,wikipage/Players,wikipage/Krieger,wikipage/Crones of Neriak,wikipage/Dun Morhen;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer,wikipage/House Salazar Assassins,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Callistege,wikipage/AkumaFruits;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Players,wikipage/Quinn;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Lolth's Deck of Many Things;wikipage/OneWiki,wikipage/Gods,wikipage/Velsharoon;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Quaal,wikipage/Venril Sathir;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/House Stayanoga;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/House Stayanoga,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Towns,wikipage/Gorda,wikipage/Kalas;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Gorda,wikipage/Leeran;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Realms,wikipage/Acheron;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes;wikipage/OneWiki,wikipage/Players,wikipage/Krieger,wikipage/Crones of Neriak;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Players,wikipage/Edan,wikipage/Asmodeus;wikipage/OneWiki,wikipage/Items of Importance,wikipage/Kunark;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Vecna,wikipage/Crones of Neriak;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/House Salazar Assassins,wikipage/House Salazar;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/House Stayanoga,wikipage/The Great Age of Peace,wikipage/Norrath;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Edan,wikipage/Moloch;wikipage/OneWiki,wikipage/Towns,wikipage/Kaladim;wikipage/OneWiki,wikipage/Characters,wikipage/Dun Morhen,wikipage/Roc Training Notebook;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer,wikipage/House Salazar Assassins,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/House Salazar Assassins;wikipage/OneWiki;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel,wikipage/Steel Inquisitor,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Ak'anon,wikipage/Orla;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/House Stayanoga;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Callistege,wikipage/AkumaFruits,wikipage/Callistege;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel;wikipage/OneWiki,wikipage/Realms,wikipage/Shadowfell;wikipage/OneWiki,wikipage/Characters,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran,wikipage/Sentient Rock Henry;wikipage/OneWiki,wikipage/Items of Importance,wikipage/Kunark,wikipage/Southern Luthadel Dock,wikipage/Luthadel;wikipage/OneWiki,wikipage/Players,wikipage/Edan,wikipage/Moloch;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel;wikipage/OneWiki,wikipage/Players,wikipage/Edan,wikipage/Elliorra;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ,wikipage/Marines;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/House Salazar;wikipage/OneWiki,wikipage/Realms,wikipage/Shadowfell,wikipage/Shadowfell Towns,wikipage/Evernight;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Callistege,wikipage/AkumaFruits,wikipage/Callistege,wikipage/Luthadel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/Execution of Quaal;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Krieger,wikipage/AkumaFruits
+tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/House Salazar Assassins,wikipage/House Salazar;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/House Salazar;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Quaal,wikipage/Venril Sathir,wikipage/Luthadel;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Gods;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/House Salazar Assassins;wikipage/OneWiki;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Ak'anon,wikipage/Orla;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Lolth's Deck of Many Things;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/House Stayanoga,wikipage/The Great Age of Peace,wikipage/Norrath;wikipage/OneWiki,wikipage/AkumaFruits,wikipage/Leeran,wikipage/Sentient Rock Henry;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/House Stayanoga,wikipage/Luthadel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ,wikipage/Marines;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Gorda,wikipage/Leeran;wikipage/OneWiki,wikipage/Characters,wikipage/Renegade Leader Kelsier;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Gods,wikipage/Velsharoon,wikipage/Nicosia;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Dungeons,wikipage/Ak'anon Mines,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Items of Importance,wikipage/Kunark;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Callistege,wikipage/AkumaFruits;wikipage/OneWiki,wikipage/Characters,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Materials,wikipage/Shadowfell,wikipage/Shadowfell Towns,wikipage/Nicosia;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Edan,wikipage/Moloch;wikipage/OneWiki,wikipage/Characters,wikipage/Dun Morhen,wikipage/Roc Training Notebook;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Namfoodle,wikipage/Ak'anon;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer,wikipage/House Salazar Assassins,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Materials,wikipage/Shadowfell,wikipage/Shadowfell Towns,wikipage/Rotting Tower,wikipage/Vecna;wikipage/OneWiki,wikipage/Realms,wikipage/Shadowfell;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Players,wikipage/Edan,wikipage/Moloch;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Realms,wikipage/Shadowfell,wikipage/Shadowfell Towns,wikipage/Evernight;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/Execution of Quaal;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Krieger,wikipage/AkumaFruits;wikipage/OneWiki,wikipage/Materials,wikipage/Shadowfell,wikipage/Shadowfell Towns,wikipage/Rotting Tower;wikipage/OneWiki,wikipage/Gods,wikipage/Velsharoon,wikipage/Nicosia,wikipage/Lorian,wikipage/Lothric,wikipage/Lorian;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Towns,wikipage/Odus,wikipage/Renegade Leader Kelsier;wikipage/OneWiki,wikipage/Realms,wikipage/Shadowfell,wikipage/Shadowfell Towns;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Quaal,wikipage/Venril Sathir;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/House Stayanoga;wikipage/OneWiki,wikipage/Realms,wikipage/Acheron;wikipage/OneWiki,wikipage/Players,wikipage/Krieger,wikipage/Crones of Neriak;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Vecna,wikipage/Crones of Neriak;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Order of Steel,wikipage/Steel Inquisitor,wikipage/Luthadel;wikipage/OneWiki,wikipage/Materials,wikipage/Shadowfell,wikipage/Shadowfell Towns;wikipage/OneWiki,wikipage/Materials,wikipage/Shadowfell,wikipage/Shadowfell Towns,wikipage/Nicosia,wikipage/Lothric;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Crones of Neriak;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,wikipage/Items of Importance,wikipage/Kunark,wikipage/Southern Luthadel Dock,wikipage/Luthadel;wikipage/OneWiki,wikipage/Players,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Renegade Leader Kelsier;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel;wikipage/OneWiki,wikipage/Materials,wikipage/Shadowfell;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Callistege,wikipage/AkumaFruits,wikipage/Callistege;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Rex The Smasher;wikipage/OneWiki,wikipage/Players,wikipage/Krieger,wikipage/Crones of Neriak,wikipage/Dun Morhen;wikipage/OneWiki,wikipage/Characters,wikipage/Venril Sathir,wikipage/Luthadel,wikipage/Execution of Quaal,wikipage/Quaal;wikipage/OneWiki,wikipage/Towns,wikipage/Faydwer,wikipage/House Salazar Assassins,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Towns,wikipage/Gorda,wikipage/Kalas;wikipage/OneWiki,wikipage/Players,wikipage/Edan,wikipage/Asmodeus;wikipage/OneWiki,wikipage/Realms;wikipage/OneWiki,wikipage/Realms,wikipage/Shadowfell,wikipage/Shadowfell Towns,wikipage/Fellhuslyder;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Callistege,wikipage/AkumaFruits,wikipage/Callistege,wikipage/Luthadel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Luthadel,wikipage/House Stayanoga;wikipage/OneWiki,wikipage/Players,wikipage/Quinn;wikipage/OneWiki,wikipage/Players,wikipage/Edan,wikipage/Elliorra
 wiki_wikilanguage = wikidpad_default_2_0
 tree_force_scratchpad_visibility = True
 further_wiki_words = 
