--- a/data/Fellhuslyder.wiki
+++ b/data/Fellhuslyder.wiki
@@ -3,5 +3,9 @@
 town of the Fell Fire Giant Family (huslyder), who have over generations, founded a city of thier own in a volcano near [Evernight], this is the shadowfell reflection of [Felwithe]
 
 Thier main export is black steel ore, mined from deep within their Volcano
+    -sold at 10g per lb
+
 
 Lead by [Yhorm] the Fire Giant
+
+Fire Giants only speak giant, and are very proud about it!
