--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -845,5 +845,17 @@ Teleport back to the cave to the Material Plane
       
     The group goes back to the ship to rest  
       
+++++Session 52
+    [Krieger] reads the highest targets of [House Salazar Assassins] to the group
+    the [Daughter of the Night] wrote in blood on all of the walls of [Croaker]'s quarters 
     
+    group leaves the boat on the West side of [Faydwer]    
+    travels to [Kaladim]
+    -[Krieger] sets the vines around the entrance on fire
+    -[Edan] topples the giant dwarf statue that was above the entranceway
+    -[Kethra] is found at the mines and forced to join the group as a follower despite there being followers of [Gruumsh] present
     
+    group enters [Acheron], kills all the orcs in the nearby area
+    -asks questions to a orc eye of gruumsh
+    -[Vulcan] blocks the entrance at the group goes back to the material plane with a rock wall
+     
