--- a/data/Kadi.wiki
+++ b/data/Kadi.wiki
@@ -1,6 +1,7 @@
 ﻿++ Kadi
 
 A God of war whose husk is at [Felwithe] awaiting the [Daughter of Night] to awaken her.
+Realm [Acheron]
 
 She has cold Blue eyes, pale white skin, but her flesh is covered in thousands of scars from her battles. She has Jet black hair that flows like fire over her shoulders. As this avatar, She always wears black metal armor adorned by metal skulls. She has a single skull on her right hip.
 
@@ -14,3 +15,7 @@ When released by the Year of the Skulls ritual
   Chain Devil - pg 72
         -appears as a departed loved one to the summoner ([Thia] for [Croaker])
         -chains, mean, obedient
+        
+++++Kethra
+  At the bottom of the mine in [Kaladim] (if the portal is open), sent here to die      
+        
