--- a/data/Kaladim.wiki
+++ b/data/Kaladim.wiki
@@ -37,3 +37,4 @@ The inside is littered with broken human arms, the remainder of each respective 
       - the portal leads to a cube in the plane [Acheron] that contains a large segment of Gruumsh's followers
       - the portal which is a large Granite cube that has a red glow coming from beyond a rocky tunnel in it
       - Orcs that came through the portal at first were orcs that got consumed by the [Mistwraith] Wurm, then later used as a dumping zone for prisoners of war from the realm of [Acheron]
+      - follower of [Kadi], [Kethra] 
