adding evil group related notes

--- a/data/Breena.wiki
+++ b/data/Breena.wiki
@@ -11,6 +11,7 @@ runs an Enchantment shop in [Ak'anon] called Betterific
     
     -(other known enchantments not for sale)
         -flatulence - applied to a food to make the consumer incredibly gassy
-        
+        -Experimental Item: 
+           A tablet sized sponge etched with runes that smells like excrement when music is playing
 loot
 -Breena's hardback book of enchantment notes        
