--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -859,3 +859,14 @@ Teleport back to the cave to the Material Plane
     -asks questions to a orc eye of gruumsh
     -[Vulcan] blocks the entrance at the group goes back to the material plane with a rock wall
      
+++++Session 53 
+    Weenies: 
+        Boat Bickering amungst the [Evil Group Crew]
+          -[Dockson] going insane and wants to leave to join his crew at [Luthadel] (and see if they're still alive)
+          -[Regdar] trying to convince everyone to just leave with the ship now and escape before they're all killed, and he'd make up a story. (Dockson doesn't trust him to not leak information)
+          -[Daughter of the Night] incoherently yelling about needing more paper to write with. (is insanely strong and refuses to back down)
+          -[Cael Caemond] in the middle of everyone barely keeping order (and being the center of the arguements due to ship can't go anywhere unless he operates it)
+          -6 Skaa cowering in horror 
+          -[Krusk], [Marta] tending to the baby Gryphons that are getting riled up by the constant shouting. 
+        Ultimately, the [Daughter of the Night] forces her opinion upon the others through death threats, and her hulk like strength. The boat reluctantly sails for [3 Helms Deep] for "paper"
+        Time Spent Sailing of 3 days needed: X  
