--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -19,7 +19,7 @@ XXXXXXX  XXXXXXX
 
 XXXXXXX
 XXXXX(August 7th)XX
-XXX
+XXXXX
 
 
 [Kyra] orders a bronze barding for her wolf Vin from Erky at [Ak'anon]
