--- a/data/Lightning.wiki
+++ b/data/Lightning.wiki
@@ -1,3 +1,5 @@
 ﻿++ Lightning
 
 gnome hating human that has joined the crew in hopes to be able to release his aggression
+
+soul was sent to [Vecna] after [Lolth's Deck of Many Things] forced it from his body.
