--- a/data/Marine HQ.wiki
+++ b/data/Marine HQ.wiki
@@ -40,6 +40,7 @@ East Barracks
             Carpenters (average skilled)
             [Giana Yem] - high elf jeweler
             [Tril] (apprentice tailor who lost her master in [Arabasta]) - patchwork tailor that creates new things from old battered items
+            [Gaslow Garmon] - human glass blower from [Arabasta] - lacks a workshop to produce wonderful things with, currently makes mosiacs from found broken shards
             
     Actor's Theatre
         Lead by Director [Louis Numre] with a crew of 4 other actors
