--- a/data/Vecna.wiki
+++ b/data/Vecna.wiki
@@ -12,3 +12,9 @@ When Released:
         
         
 Avatar: Lich (pg 202)        
+
+
+Souls in posession:
+  -[Lightning]
+  -[Krieger]
+  -[Robert Culliford]
