--- a/data/3 Helms Deep.wiki
+++ b/data/3 Helms Deep.wiki
@@ -64,8 +64,8 @@ Migrating from Augsburg:
             
 -North Dock
     - 2 [Order of Steel] warships are parked here, one has no cannons or control orb, the other has 3 cannons and a control orb
-    -animal vendor at a warehouse, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
+    -Menagerie: animal vendor at a warehouse, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
             2cp x lb of chicken (1d6) (5 at stall)
             1gp per goat (2 at stall)
             3gp per pig (2 at stall) 
-            5 horses (not for sale)
+            4 horses
