--- a/data/Nicosia.wiki
+++ b/data/Nicosia.wiki
@@ -8,3 +8,7 @@ currently ruled by [Lorian], a beefy dark knight, and [Lothric], an emaciated ne
 
 
 Traveling through Nicosia, explorers will encounter endless zombies
+
+
+[Lothric]'s collection:
+  -Tome of Stilled Tongue (pg 208 of DM book) (one of a set of five)
