--- a/data/Rotting Tower.wiki
+++ b/data/Rotting Tower.wiki
@@ -5,3 +5,8 @@ The [Shadowfell] city of [Nowa Huta]
 nestled in a region that deteriotates living things within it, it's a city of spirits/ghasts/ghosts
 
 This is the home of [Vecna]
+
+Rooms of Interest:
+  Laboratory - 
+    Tome of Stilled Tongue (pg 208 of DM book) (one of a set of five)
+    Tome of Clear Thought (pg 208 of DM book)
